# rb_theron_common

rb_theron_description/: CMakeLists.txt  package.xml
rb_theron_description/config/: rb_theron_controller.yaml
rb_theron_description/robots/: rb_theron.urdf.xacro
rb_theron_description/urdf/: common.gazebo.xacro
rb_theron_description/urdf/bases/: theron_base.urdf.xacro
rb_theron_description/urdf/module_cage/: module_cage.urdf.xacro
rb_theron_description/urdf/pole/: mcq_pole.urdf.xacro  simple_pole.urdf.xacro
rb_theron_description/urdf/rocker/: mcq_prototype_rocker.urdf.xacro
rb_theron_description/urdf/wheels/: castor.urdf.xacro  rubber_wheel.transmission.xacro
