<?xml version="1.0"?>
<package format="3">
  <name>rb_theron_description</name>
  <version>0.0.0</version>
  <description>The rb_theron_description package</description>
  <maintainer email="todo@todo.com">tgrip</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robotnik_sensors</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
